Both component is finished

--- a/src/app/employee-listing/employee-listing.component.html
+++ b/src/app/employee-listing/employee-listing.component.html
@@ -1,1 +1,32 @@
-<p>employee-listing works!</p>
+<div class="top">
+    <div *ngIf="employeeList.length!=0">
+        <div *ngFor ="let employee of employeeList" class="card">
+            <mat-divider></mat-divider>
+            <mat-card class="example-card">
+                <mat-card-header>
+                <mat-icon role="button" style="cursor: pointer" type="button" (click)="removeEmployee(employee)">highlight_off</mat-icon>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title>{{employee['name']}}</mat-card-title>
+                    <mat-card-subtitle>{{employee['position']}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>
+                    {{employee['about']}}
+                </mat-card-content>
+                <mat-card-footer>
+                   <span> Joining Date : </span>{{employee['joining']}}
+                </mat-card-footer>
+            </mat-card>
+    
+        </div>
+
+    </div>
+    
+    <div *ngIf="! employeeList.length" >
+        <p style="font-family: 'Nunito Sans', sans-serif;
+        color:#f4a896;
+        font-size:15px;">
+            No employee is added. Kindly add one
+        </p>
+    </div>
+
+</div>
