--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,7 +42,7 @@
 
 .links{
     display:table;
-    margin:5px auto;
+    margin:1% auto;
     color: #f4a896;
     label{
         font-size:20px;
