--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -44,11 +44,9 @@
     display:table;
     margin:1% auto;
     color: #f4a896;
-    label{
-        font-size:20px;
-        margin:5px;
-        color: #f4a896;
-        font-weight: 800;
+    a{
+        margin: 2px;
+        // color:#358597;
     }
 
 }
