--- a/src/app/employee-registration/employee-registration.component.html
+++ b/src/app/employee-registration/employee-registration.component.html
@@ -1,25 +1,37 @@
-<div class="top">
-    <form validate #loginForm="ngForm" *ngIf="formOpen" (ngSubmit)="onSubmit()">
+<div class="container col col-lg-4">
+    <form validate #loginForm="ngForm" *ngIf="formOpen"  (ngSubmit)="onSubmit()">
         <!-- {{loginForm.value | json}} -->
         <div class="form-group">
             <label for="name">Your Name:</label>
             
-            <input  type="text" [(ngModel)]="name" #employeeName="ngModel" name="name" class="form-control" required [class.is-invalid]="employeeName.invalid && employeeName.touched">
+            <input  type="text" maxlength="30"maxlength="25" [(ngModel)]="name" #employeeName="ngModel" name="name" class="form-control" required [class.is-invalid]="employeeName.invalid && employeeName.touched">
+            <mat-error *ngIf="employeeName.invalid && employeeName.touched">
+                Name is Required! & must be between 30 characters
+            </mat-error>
         </div> 
         <div class="form-group">
             <label for="position">Your Position:</label>
             
-            <input type="text" [(ngModel)]="position" name="position"  #employeePosition="ngModel" required  class="form-control" [class.is-invalid]="employeePosition.invalid && employeePosition.touched">
+            <input type="text" maxlength="25" [(ngModel)]="position" name="position"  #employeePosition="ngModel" required  class="form-control" [class.is-invalid]="employeePosition.invalid && employeePosition.touched">
+            <mat-error *ngIf="employeePosition.invalid && employeePosition.touched">
+                Position is Required! & must be between 25 characters
+            </mat-error>
         </div>
         <div class="form-group">
             <label for="about"> specification:</label>
             
             <input type="text"  [(ngModel)]="about" name="about"  #employeeAbout="ngModel" required  class="form-control" [class.is-invalid]="employeeAbout.invalid && employeeAbout.touched">
+            <mat-error *ngIf="employeeAbout.invalid && employeeAbout.touched">
+                specification is Required!
+            </mat-error>
         </div>
         <div class="form-group">
             <label for="joining">Your joing date:</label>
             
             <input type="date"  [(ngModel)]="joining" name="joining"  #employeeJoining="ngModel" required  class="form-control" [class.is-invalid]="employeeJoining.invalid && employeeJoining.touched"> 
+            <mat-error *ngIf="employeeJoining.invalid && employeeJoining.touched">
+                Joing Date is not filled!!
+            </mat-error>
         </div>
         
         <div class="form-group" style="margin:1%">
@@ -30,8 +42,8 @@
     <div *ngIf="display">
         <div class="message" >{{message}}</div>
         <div>
-            <button type="button" class="btn btn-dark" (click)="form()">Submit more</button> <br>
-            <!-- <a type="button" class="btn btn-dark" routerLink="/employee" >View Employees</a> -->
+            <button type="button" class="btn btn-dark" (click)="form()">Submit more</button>
+            <a type="button" class="btn btn-dark" routerLink="/employee" >View Employees</a>
 
         </div>
     </div>
